recursion.lessons.recursion.tree.Tree.scala.error
Tree:5: error: not enough arguments for method subtree: (steps: Int, length: Double, angle: Double, shrink: Double)Unit.
Unspecified value parameters steps, length, angle, ...
 subtree()
        ^